<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrClientPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clientPage">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:fadeScrollbars="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upDivider2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/nestedConstr"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/dateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/phone_label"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clientLayout" />

                <TextView
                    android:id="@+id/clientLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/name_label"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/timeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/visits_to_free_label"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dateLayout" />

                <TextView
                    android:id="@+id/notesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/notes_label"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/timeLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/clientLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clientLabel">

                    <EditText
                        android:id="@+id/editClient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="26"
                        android:ems="10"
                        android:fontFamily="@font/opensans_light"
                        android:hint="@string/name_hint"
                        android:backgroundTint="@color/gray2"
                        android:textColorHint="@color/gray2"
                        android:textColor="@color/textColor"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dateLabel">

                    <EditText
                        android:id="@+id/editDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/opensans_light"
                        android:hint="@string/phone_hint"
                        android:textColorHint="@color/gray2"
                        android:backgroundTint="@color/gray2"
                        android:textColor="@color/textColor"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/timeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/timeLabel">

                    <EditText
                        android:id="@+id/editTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="1"
                        android:ems="10"
                        android:fontFamily="@font/opensans_light"
                        android:hint="@string/vistis_free_hint"
                        android:textColorHint="@color/gray2"
                        android:backgroundTint="@color/gray2"
                        android:textColor="@color/textColor"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/notesLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/notesLabel">

                    <EditText
                        android:id="@+id/editNote2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:fontFamily="@font/opensans_light"
                        android:hint="@string/enter_note_hint"
                        android:textColorHint="@color/gray2"
                        android:backgroundTint="@color/gray2"
                        android:textColor="@color/textColor"
                        android:inputType="textMultiLine"
                        android:maxLines="8"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/upDivider2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintHeight_percent="0.002"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoName"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/infoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/personal_info_title"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ripple_effect_rounded"
        android:fontFamily="@font/opensans_regular"
        android:foreground="@drawable/empty_rounded_red"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ripple_effect_rounded"
        android:fontFamily="@font/opensans_regular"
        android:foreground="@drawable/empty_rounded_red"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveBtn2"
        app:layout_constraintStart_toEndOf="@+id/cancelBtn2"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <Button
        android:id="@+id/cancelBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/ripple_effect_rounded"
        android:fontFamily="@font/opensans_regular"
        android:foreground="@drawable/empty_rounded_red"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
</androidx.constraintlayout.widget.ConstraintLayout>