<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrClientPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clientPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoConstr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/phone_label"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/phoneIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/infoPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/opensans_regular"
            android:text="[phone]"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/clientLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/last_came_label"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lastIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/infoLastDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/opensans_regular"
            android:text="[date1]"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/visits_to_free_label"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/giftIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.375" />

        <TextView
            android:id="@+id/infoFree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/opensans_regular"
            android:text="[number]"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.375" />

        <TextView
            android:id="@+id/firstCameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/added_label"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addedIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.63" />

        <TextView
            android:id="@+id/infoAddedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/opensans_regular"
            android:text="[date2]"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.63" />

        <TextView
            android:id="@+id/appointListLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/list_of_appointments_button"
            android:textAllCaps="true"
            android:textColor="@color/pressable_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upDivider2"
            android:focusable="true" />

        <TextView
            android:id="@+id/infoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/opensans_regular"
            android:maxLength="26"
            android:text="[name]"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/notesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/notes_label_2"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/midDivider2" />

        <ImageView
            android:id="@+id/phoneIcon"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/phone_brown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintWidth_percent="0.09" />

        <ImageView
            android:id="@+id/giftIcon"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/gift"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.384" />

        <ImageView
            android:id="@+id/addedIcon"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/added"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.64" />

        <ImageView
            android:id="@+id/lastIcon"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/first"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.514" />

        <View
            android:id="@+id/upDivider2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.005"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoName"
            app:layout_constraintVertical_bias="0.63"
            app:layout_constraintWidth_percent="0.8" />

        <ImageView
            android:id="@+id/listIcon"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/list"
            app:layout_constraintEnd_toStartOf="@+id/appointListLabel"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintTop_toBottomOf="@+id/upDivider2"
            app:layout_constraintWidth_percent="0.06" />

        <View
            android:id="@+id/midDivider2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorPrimary"
            app:layout_constraintHeight_percent="0.005"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listIcon"
            app:layout_constraintWidth_percent="0.9" />

        <ImageView
            android:id="@+id/notesIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/notes"
            app:layout_constraintEnd_toStartOf="@+id/notesLabel"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@+id/midDivider2"
            app:layout_constraintWidth_percent="0.1" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#41214B63"
        android:fadeScrollbars="false"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/editClientFAB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoConstr">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/notes_go_here_hint"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editClientFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"
        android:elevation="6dp"
        app:borderWidth="0dp"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>